--- a/index.html
+++ b/index.html
@@ -20,9 +20,60 @@
                 <a href="#" class="btn btn_animated">открыть каталог</a>
             </div>
         </header>
+
+        <main>
+            <section class="section-about">
+                <div class="align-center margin-bottom-80px">
+                    <h2 class="title-secondary">
+                         Все только в полной комплектации
+                    </h2>
+                </div>
+
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="title-third margin-bottom-10px">ПОЗВОЛЬТЕ СЕБЕ НАСТОЯЩЕЕ АВТО</h3>
+                        <p class="paragraph margin-bottom-30px">Элитные автомобили – это символ роскоши, статуса и безупречного стиля.
+                             Они сочетают в себе передовые технологии, роскошные материалы и высокую производительность.
+                              Идеально сбалансированный дизайн и обширный спектр опций позволяют каждому владельцу настроить
+                               автомобиль в соответствии с его индивидуальными предпочтениями. Комфорт и удобство в салоне,
+                                инновационные системы безопасности и продуманные детали, делают каждую поездку на элитном автомобиле
+                                 незабываемой. Эти автомобили олицетворяют высший класс и представляют собой исключительное сочетание
+                                  изысканности, мощности и элегантности.</p>         
+                    </div>
+
+                    <div class="col-1-of-2">
+                        <h3 class="title-third margin-bottom-10px">КАЧЕСТВО ОТ ПРОИЗВОДИТЕЛЕЙ</h3>
+                        <p class="paragraph margin-bottom-50px">Элитные автомобили – это символ роскоши, статуса и безупречного стиля.
+                             Они сочетают в себе передовые технологии, роскошные материалы и высокую производительность.
+                              Идеально сбалансированный дизайн и обширный спектр опций позволяют каждому владельцу настроить
+                               автомобиль в соответствии с его индивидуальными предпочтениями. Комфорт и удобство в салоне,
+                                инновационные системы безопасности и продуманные детали, делают каждую поездку на элитном автомобиле
+                                 незабываемой. Эти автомобили олицетворяют высший класс и представляют собой исключительное сочетание
+                                  изысканности, мощности и элегантности.</p>
+
+                        <a href="#" class="btn-text">Узнать больше &rarr;</a>
+                    </div>
+
+                    <div class="col-1-of-2">
+                        Изображение
+                    </div>
+                </div>
+
+            </section>
+        </main>
+
     </div>
 
-    <section class="grid-test">
+
+
+
+
+
+
+
+
+
+    <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">
                 col-1-of-2
@@ -88,7 +139,7 @@
                 col-3-of-4
             </div>
 
-        </div>
+        </div> -->
         
 
     </section>
