--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
                                 инновационные системы безопасности и продуманные детали, делают каждую поездку на элитном автомобиле
                                  незабываемой. Эти автомобили олицетворяют высший класс и представляют собой исключительное сочетание
                                   изысканности, мощности и элегантности.</p>         
-                    </div>
 
-                    <div class="col-1-of-2">
                         <h3 class="title-third margin-bottom-10px">КАЧЕСТВО ОТ ПРОИЗВОДИТЕЛЕЙ</h3>
                         <p class="paragraph margin-bottom-50px">Элитные автомобили – это символ роскоши, статуса и безупречного стиля.
                              Они сочетают в себе передовые технологии, роскошные материалы и высокую производительность.
@@ -55,7 +53,11 @@
                     </div>
 
                     <div class="col-1-of-2">
-                        Изображение
+                        <div class="composition">
+                            <img src="img/five.jpg" alt="five" class="composition__photo composition__photo_n1">
+                            <img src="img/four.jpg" alt="four" class="composition__photo composition__photo_n2">
+                            <img src="img/one.jpg" alt="one" class="composition__photo composition__photo_n3">
+                        </div>
                     </div>
                 </div>
 
