--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Автосалон</title>
 </head>
@@ -25,7 +26,7 @@
             <section class="section-about">
                 <div class="align-center margin-bottom-80px">
                     <h2 class="title-secondary">
-                         Все только в полной комплектации
+                        Все только в полной комплектации
                     </h2>
                 </div>
 
@@ -33,21 +34,21 @@
                     <div class="col-1-of-2">
                         <h3 class="title-third margin-bottom-10px">ПОЗВОЛЬТЕ СЕБЕ НАСТОЯЩЕЕ АВТО</h3>
                         <p class="paragraph margin-bottom-30px">Элитные автомобили – это символ роскоши, статуса и безупречного стиля.
-                             Они сочетают в себе передовые технологии, роскошные материалы и высокую производительность.
-                              Идеально сбалансированный дизайн и обширный спектр опций позволяют каждому владельцу настроить
-                               автомобиль в соответствии с его индивидуальными предпочтениями. Комфорт и удобство в салоне,
+                            Они сочетают в себе передовые технологии, роскошные материалы и высокую производительность.
+                                Идеально сбалансированный дизайн и обширный спектр опций позволяют каждому владельцу настроить
+                                автомобиль в соответствии с его индивидуальными предпочтениями. Комфорт и удобство в салоне,
                                 инновационные системы безопасности и продуманные детали, делают каждую поездку на элитном автомобиле
-                                 незабываемой. Эти автомобили олицетворяют высший класс и представляют собой исключительное сочетание
-                                  изысканности, мощности и элегантности.</p>         
+                                незабываемой. Эти автомобили олицетворяют высший класс и представляют собой исключительное сочетание
+                                    изысканности, мощности и элегантности.</p>
 
                         <h3 class="title-third margin-bottom-10px">КАЧЕСТВО ОТ ПРОИЗВОДИТЕЛЕЙ</h3>
                         <p class="paragraph margin-bottom-50px">Элитные автомобили – это символ роскоши, статуса и безупречного стиля.
-                             Они сочетают в себе передовые технологии, роскошные материалы и высокую производительность.
-                              Идеально сбалансированный дизайн и обширный спектр опций позволяют каждому владельцу настроить
-                               автомобиль в соответствии с его индивидуальными предпочтениями. Комфорт и удобство в салоне,
+                            Они сочетают в себе передовые технологии, роскошные материалы и высокую производительность.
+                                Идеально сбалансированный дизайн и обширный спектр опций позволяют каждому владельцу настроить
+                                автомобиль в соответствии с его индивидуальными предпочтениями. Комфорт и удобство в салоне,
                                 инновационные системы безопасности и продуманные детали, делают каждую поездку на элитном автомобиле
-                                 незабываемой. Эти автомобили олицетворяют высший класс и представляют собой исключительное сочетание
-                                  изысканности, мощности и элегантности.</p>
+                                незабываемой. Эти автомобили олицетворяют высший класс и представляют собой исключительное сочетание
+                                    изысканности, мощности и элегантности.</p>
 
                         <a href="#" class="btn-text">Узнать больше &rarr;</a>
                     </div>
@@ -60,8 +61,203 @@
                         </div>
                     </div>
                 </div>
+            </section>
+
+            <section class="section-adventure">
+                <div class="row">
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <i class="adventure-card__icon icon-earth margin-bottom-30px"></i>
+                            <h3 class="title-third margin-bottom-10px">путешествия</h3>
+                            <p class="paragraph">Лучшие авто дают возможность испытывать комфорт даже при длительных путешествиях
+                                в самые отдалённые места нашего мира.</p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <i class="adventure-card__icon icon-trophy margin-bottom-30px"></i>
+                            <h3 class="title-third margin-bottom-10px">путешествия</h3>
+                            <p class="paragraph">Лучшие авто дают возможность испытывать комфорт даже при длительных путешествиях
+                                в самые отдалённые места нашего мира.</p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <i class="adventure-card__icon icon-quill margin-bottom-30px"></i>
+                            <h3 class="title-third margin-bottom-10px">путешествия</h3>
+                            <p class="paragraph">Лучшие авто дают возможность испытывать комфорт даже при длительных путешествиях
+                                в самые отдалённые места нашего мира.</p>
+                        </div>
+                    </div>
+                    <div class="col-1-of-4">
+                        <div class="adventure-card">
+                            <i class="adventure-card__icon icon-flag margin-bottom-30px"></i>
+                            <h3 class="title-third margin-bottom-10px">путешествия</h3>
+                            <p class="paragraph">Лучшие авто дают возможность испытывать комфорт даже при длительных путешествиях
+                                в самые отдалённые места нашего мира.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section-tour">
+                <div class="text-align-center margin-bottom-80px">
+                    <h2 class="title-secondary">
+                        Все только в полной комплектации
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_1 margin-bottom-50px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">Специальное</span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">предложение</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <br>
+                                        <li>Первый текст</li>
+                                        <li>Второй текст</li>
+                                        <br>
+                                        <li>Третий текст</li>
+                                        <li>Четвёртый текст</li>
+                                        <li>Пятый текст</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text card-tour__text_1">Тест драйв</p>
+                                    <p class="card-tour__text card-tour__text_2">15000₽</p>
+                                    <a href="#" class="btn btn_animated">забронировать</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_2 margin-bottom-50px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">Специальное</span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">предложение</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <br>
+                                        <li>Первый текст</li>
+                                        <li>Второй текст</li>
+                                        <br>
+                                        <li>Третий текст</li>
+                                        <li>Четвёртый текст</li>
+                                        <li>Пятый текст</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text card-tour__text_1">Тест драйв</p>
+                                    <p class="card-tour__text card-tour__text_2">15000₽</p>
+                                    <a href="#" class="btn btn_animated">забронировать</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card-tour">
+                            <div class="card-tour__side card-tour__side_front">
+                                <div class="card-tour__img card-tour__img_3 margin-bottom-50px"></div>
+                                <h4 class="card-tour__title">
+                                    <span class="card-tour__span card-tour__span_1">Специальное</span>
+                                    <br>
+                                    <span class="card-tour__span card-tour__span_2">предложение</span>
+                                </h4>
+                                <div class="card-tour__descr">
+                                    <ul>
+                                        <br>
+                                        <li>Первый текст</li>
+                                        <li>Второй текст</li>
+                                        <br>
+                                        <li>Третий текст</li>
+                                        <li>Четвёртый текст</li>
+                                        <li>Пятый текст</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-tour__side card-tour__side_back">
+                                <div class="card-tour__backSide-box">
+                                    <p class="card-tour__text card-tour__text_1">Тест драйв</p>
+                                    <p class="card-tour__text card-tour__text_2">15000₽</p>
+                                    <a href="#" class="btn btn_animated">забронировать</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="text-align-center">
+                    <a href="#" class="btn btn_animated">забронировать</a>
+                </div>
+
+                <section class="section-feedback">
+                    <div class="bg-gradient"></div>
+                    <video class="bg-video" autoplay muted loop>
+                        <source src="img/movie.mp4">
+                        <source src="img/movie.webm">
+                    </video>
+
+                    <div class="text-align-center margin-bottom-80px">
+                        <br><br><br><br><br><br>
+                        <h2 class="title-secondary title-secondary_white">
+                            Отзывы наших клиентов
+                        </h2>
+                    </div>
+                    <div class="row">
+                        <div class="feedback-card">
+                            <figure class="feedback-card__img">
+                                <img src="img/she.jpg" alt="Maria">
+                                <figcaption class="feedback-card__name">
+                                    Мария
+                                </figcaption>
+                            </figure>
+                            <div class="feedback-card_box">
+                                <h3 class="title-third margin-bottom-10px">ПОЗВОЛЬТЕ СЕБЕ НАСТОЯЩЕЕ АВТО</h3>
+                            </div>
+                            <p class="paragraph"> Текст отзывов текст отзывов текст отзывов текст отзывов
+                                текст отзывов текст отзывов текст отзывов текст отзывов текст отзывов
+                                текст отзывов текст отзывов текст отзывов текст отзывов текст отзывов текст отзывов
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="feedback-card">
+                            <figure class="feedback-card__img">
+                                <img src="img/he.jpg" alt="I am">
+                                <figcaption class="feedback-card__name">
+                                    Creator
+                                </figcaption>
+                            </figure>
+                            <div class="feedback-card_box">
+                                <h3 class="title-third margin-bottom-10px">ПОЗВОЛЬТЕ СЕБЕ НАСТОЯЩЕЕ АВТО</h3>
+                            </div>
+                            <p class="paragraph"> Текст отзывов текст отзывов текст отзывов текст отзывов
+                                текст отзывов текст отзывов текст отзывов текст отзывов текст отзывов
+                                текст отзывов текст отзывов текст отзывов текст отзывов текст отзывов текст отзывов
+                            </p>
+                        </div>
+                    </div>
+                    <div class="text-align-center">
+                        <a href="#" class="btn btn_animated">забронировать</a>
+                    </div>
+                </section>
 
             </section>
+
         </main>
 
     </div>
