add next section

--- a/index.html
+++ b/index.html
@@ -258,6 +258,32 @@
 
             </section>
 
+            <section class="section-book">
+                <div class="row">
+                    <div class="book">
+                        <div class="book_form">
+                            <form action="#" class="form">
+                                <div class="align-center margin-bottom-30px">
+                                    <h2 class="title-secondary">
+                                        Тест драйв
+                                    </h2>
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="text" class="form_input" placeholder="Имя Фамилия" id="name" required>
+                                    <label for="name" class="form_label">Ваше имя и фамилия</label>
+                                </div>
+
+                                <div class="form-group">
+                                    <input type="email" class="form_input" placeholder="Ваш email" id="email" required>
+                                    <label for="email" class="form_label">Ваш email</label>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </main>
 
     </div>
