--- a/index.html
+++ b/index.html
@@ -269,14 +269,14 @@
                                     </h2>
                                 </div>
 
-                                <div class="form-group">
-                                    <input type="text" class="form_input" placeholder="Имя Фамилия" id="name" required>
-                                    <label for="name" class="form_label">Ваше имя и фамилия</label>
+                                <div class="form__group">
+                                    <input type="text" class="form__input" placeholder="Имя Фамилия" id="name" required>
+                                    <label for="name" class="form__label">Ваше имя и фамилия</label>
                                 </div>
 
-                                <div class="form-group">
-                                    <input type="email" class="form_input" placeholder="Ваш email" id="email" required>
-                                    <label for="email" class="form_label">Ваш email</label>
+                                <div class="form__group">
+                                    <input type="email" class="form__input" placeholder="Ваш email" id="email" required>
+                                    <label for="email" class="form__label">Ваш email</label>
                                 </div>
                             </form>
                         </div>
@@ -365,8 +365,5 @@
 
         </div> -->
         
-
-    </section>
-
 </body>
 </html>
