add footer and fix input form

--- a/index.html
+++ b/index.html
@@ -278,14 +278,43 @@
                                     <input type="email" class="form__input" placeholder="Ваш email" id="email" required>
                                     <label for="email" class="form__label">Ваш email</label>
                                 </div>
+
+                                <div class="form__group">
+                                    <div class="form__group-radio">
+                                        <input type="radio" class="form__input-radio" id="test-1" name="checked">
+                                        <label for="test-1" class="form__label-radio"><span class="form__button-radio"></span> Групповой</label>
+                                    </div>
+                                    <div class="form__group-radio">
+                                        <input type="radio" class="form__input-radio" id="test-2" name="checked">
+                                        <label for="test-2" class="form__label-radio"><span class="form__button-radio"></span> Индивидуальный</label>
+                                    </div>
+                                </div>
+
+                                <div class="form__group">
+                                    <button class="btn btn_brown">Забронировать</button>
+                                </div>
                             </form>
                         </div>
                     </div>
                 </div>
             </section>
-
         </main>
-
+        <footer class="footer">
+            <div class="row text-align-center">
+                <a href="#">
+                    <img src="icons/logo.svg" alt="logo" class="footer__logo">
+                </a>
+            </div>
+            <div class="row">
+                <ul class="footer_list">
+                    <li class="footer__item"><a href="#" class="footer__link">о нас</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">скидки</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">лучшие предложения</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">представлители в вашем городе</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">связаться с нами</a></li>
+                </ul>
+            </div>
+        </footer>
     </div>
 
 
